--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.0', '3.1', '3.2']
+        ruby-version: ['3.2']
       fail-fast: false
       max-parallel: 4
 
@@ -26,13 +26,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true
-      
+
       - name: Add platform to bundle
         run: |
           bundle lock --add-platform x86_64-linux
@@ -53,9 +53,9 @@ jobs:
           key: ${{ runner.os }}-rubocop-${{ hashFiles('**/.rubocop.yml') }}
           restore-keys: |
             ${{ runner.os }}-rubocop-
-      
+
       - name: Run tests
         run: bundle exec rspec --format progress
-      
+
       - name: Run rubocop
         run: bundle exec rubocop --parallel --format github
